--- a/Booking/style.css
+++ b/Booking/style.css
@@ -330,7 +330,7 @@ padding: 24px 1rem !important;
 }
 
 .footer .container{
-    background: url(/ramlah/Images/شهرزاد-فوتير.png);
+    background: url(/Images/شهرزاد-فوتير.png);
     background-repeat: no-repeat;
     background-size: 900px;
     background-position:bottom center;
