--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ header.sticky{
 */
 .hero-container{
     margin-top: -6rem !important;
-    background: url(  /Images/Group6.png);
+    background: url(Images/Group6.png);
     padding: 0rem 5rem 20rem 0rem;  
     background-size: cover;
 }
